Fix the issue icons cover the content of the page on mobile (#486)
* hide the rocket icon when display is too small
* Update the proposed fix for overlapping layout issues

--- a/themes/grass/assets/css/style.css
+++ b/themes/grass/assets/css/style.css
@@ -1327,7 +1327,11 @@ code{
   background: rgba(255, 255, 255, 0.8)
   /* background: radial-gradient(circle, var(--white-color) 80%, transparent 90%); */
 }
-
+@media (max-width: 992px) {
+  .col-2 i {
+    font-size: 3rem;
+    }
+}
 @media (max-width: 576px) {
 
   body {
@@ -1393,6 +1397,10 @@ code{
   .hero-section {
     padding-bottom: 0px;
   }
+
+  .col-2 i {
+    font-size: 1.5rem;
+    }
 
   .mb-40 {
     margin-bottom: 20px !important;
